umol-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@pymol_A0A4W3JAN5_min.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  summary:
    sum_formula: C14H23N4O6S-
    atom_count: 48
    bond_count: 47
    property_count: 0
molecule_lenient:
  success: true
  summary:
    sum_formula: C14H23N4O6S-
    atom_count: 48
    bond_count: 47
    property_count: 0
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C14H23N4O6S-
    atom_count: 48
    bond_count: 47
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C14H23N4O6S-
    atom_count: 48
    bond_count: 47
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
