umol-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@rdkit_CrBz2.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule_lenient
category: molecule_lenient
molecule:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 41, col 0"
molecule_lenient:
  success: true
  summary:
    sum_formula: C12Cr
    atom_count: 13
    bond_count: 24
    property_count: 0
extended_molecule:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 41, col 0"
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C12Cr
    atom_count: 13
    bond_count: 24
    extended_atoms: 0
    extended_bonds: 12
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
