umol-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@rdkit_H3BNH3.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule_lenient
category: molecule_lenient
molecule:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 8, col 0"
molecule_lenient:
  success: true
  summary:
    sum_formula: BN
    atom_count: 2
    bond_count: 1
    property_count: 0
extended_molecule:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 8, col 0"
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: BN
    atom_count: 2
    bond_count: 1
    extended_atoms: 0
    extended_bonds: 1
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
